# MCP-Fire

./: README.md  pyproject.toml
mcpfire/: bootstrap.py  cli.py  config.py  mcp_builder.py  models.py  server.py  service_container.py
mcpfire/cli_commands/: repl.py
mcpfire/core/: converters.py  exec.py
mcpfire/http_models/: __init__.py  jetbrains.py  models.py  yaml.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/fixtures/http/: pokemon.http
tests/unit/: test_execute_http_request.py
tests/unit/http_models/: test_jetbrains.py  test_request_model.py
